@@ -1,6 +1,11 @@
 karlserve package Changelog
 ===========================
 
+Unreleased
+----------
+
+- Silently ignore karlserve script entry points that generate ImportError.
+
 1.18 (2012-10-17)
 -----------------
 
